frontend/tests/cases/negative/security/leak.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/leak.gr:4:1:
Public is not approximatable by Private for type Sec